aksnapp/pgadmin.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - image: dpage/pgadmin4
        name: pgadmin
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5050
        volumeMounts:
        - name: pgadmin
          mountPath: /var/lib/pgadmin
          subPath: data
      volumes:
      - name: pgadmin
        persistentVolumeClaim:
          claimName: pvc-pgadmin

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  labels:
    app: pgadmin-svc
  name: pgadmin-svc
spec:
  ports:
  - name: pgadmin
    port: 80
    targetPort: 5050
  selector:
    app: pgadmin
  type: LoadBalancer
  # loadBalancerIP: 10.140.3.237
