aksnapp/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  # namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - jenkins.lgahorizon.com
    secretName: tls-secret
  rules:
  - host: jenkins.lgahorizon.com
    http:
      paths:
      - backend:
          serviceName: jenkins-svc
          servicePort: 80
        path: /
