aksnapp/sonar-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonar
  # namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - sonar.lgahorizon.com
    secretName: tls-secret
  rules:
  - host: sonar.lgahorizon.com
    http:
      paths:
      - backend:
          serviceName: sonar
          servicePort: 80
        path: /
